<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mtv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mEditName"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mEditEmail"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/mEditPhone"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/mEditIDNumber"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/id"
        android:inputType="number" />

    <EditText
        android:id="@+id/mEditPassword"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reg"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/orange_dark" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/orange" />
    </LinearLayout>

</LinearLayout>